crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_decl_class-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    symbols: Symbols {
        fns: {},
        classes: {
            "T": (
                Public,
                Class {
                    name: "T",
                    tparams: [],
                    bounds: [],
                    members: ClassMembers {
                        fields: {},
                        fns: {},
                        aliases: {},
                        impls: [],
                    },
                },
            ),
        },
        traits: {},
        aliases: {},
    },
    top_level: [],
}
