crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_decl_fn.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    symbols: Symbols {
        fns: {
            "f": (
                Private,
                Fn {
                    name: "f",
                    tparams: [],
                    params: [],
                    ret: None,
                    bounds: [],
                    body: None,
                },
            ),
        },
        classes: {},
        traits: {},
        aliases: {},
    },
    top_level: [],
}
