crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_decl_trait-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {
            "T": (
                Public,
                Trait {
                    name: "T",
                    tparams: [],
                    bounds: [],
                    members: TraitMembers {
                        fns: {},
                        aliases: {},
                    },
                },
            ),
        },
        aliases: {},
    },
    top_level: [],
}
