crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_decl_trait.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {
            "Foo": (
                Private,
                Trait {
                    name: "Foo",
                    tparams: [
                        TParam {
                            name: "T",
                            default: None,
                        },
                    ],
                    bounds: [
                        Bound {
                            ty: Path {
                                segments: [
                                    Segment {
                                        ident: "T",
                                        generic_args: [],
                                    },
                                ],
                            },
                            constraint: [
                                Path {
                                    segments: [
                                        Segment {
                                            ident: "x",
                                            generic_args: [],
                                        },
                                    ],
                                },
                                Path {
                                    segments: [
                                        Segment {
                                            ident: "y",
                                            generic_args: [],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                    members: TraitMembers {
                        fns: {
                            "f": Fn {
                                name: "f",
                                tparams: [],
                                params: [],
                                ret: None,
                                bounds: [],
                                body: None,
                            },
                        },
                        aliases: {
                            "U": Alias {
                                name: "U",
                                tparams: [],
                                bounds: [],
                                ty: Path {
                                    segments: [
                                        Segment {
                                            ident: "T",
                                            generic_args: [],
                                        },
                                    ],
                                },
                            },
                        },
                    },
                },
            ),
        },
        aliases: {},
    },
    top_level: [],
}
