crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_array-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Copy(
            Int {
                value: 0,
            },
            Int {
                value: 100,
            },
        ),
    ),
    [],
)
