crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_array.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    List(
        [
            Int {
                value: 0,
            },
            Int {
                value: 1,
            },
            Int {
                value: 2,
            },
        ],
    ),
)
