crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_assign-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    SetVar {
        name: "a",
        value: SetVar {
            name: "b",
            value: GetVar {
                name: "c",
            },
            op: None,
        },
        op: None,
    },
)
