crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_assign-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        SetVar {
            name: "a",
            value: GetVar {
                name: "b",
            },
            op: Some(
                Add,
            ),
        },
    ),
    [],
)
