crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_assign-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    SetVar(
        SetVar {
            name: "a",
            value: GetVar(
                GetVar {
                    name: "b",
                },
            ),
            op: Some(
                Sub,
            ),
        },
    ),
)
